--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
 	<title>Hello Coursera!</title>
 </head>
 <body>
-<h1> Hello Coursera!It's a great course!</h1>
+<h3> Clicking This Link You must be Single</h3>
 </body>
 </html>
