--- a/site/index.html
+++ b/site/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Hello Coursera!</title>
+	<title>Click This Link</title>
 </head>
 <body>
 <h3> Clicking This Link You must be Single</h3>
