--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,7 @@
 	<title>Click This Link</title>
 </head>
 <body>
-<h3> Clicking This Link You must be Single</h3>
+<h3>Click the Photo</h3>
+<a href=link_to.html><img src="92.png" width="380" height="214"></a>
 </body>
 </html>
