--- a/site/index.html
+++ b/site/index.html
@@ -3,6 +3,11 @@
 <head>
 	<title>Click This Link</title>
 </head>
+<style>
+	h1{
+		color: aqua;
+	}
+</style>
 <body>
 <h1>Click the Photo</h1>
 <a href=link_to.html><img src="92.png" width="760" height="428"></a>
