--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -1,9 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title></title>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
+	<link rel="stylesheet" href="css/mod2.css" >
+	<title>Assignment Solution for Module 2</title>
 </head>
 <body>
+	<h1>Our Menu </h1>
+	<div>
+		<div class="col-dv-4 col-tv-6 col-mv-12">
+			  <h3 id="p1">Chicken</h3>
+			    <p>
+			     lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore mgna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			     commado consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non prodient, sunt in culpa qui officia deserunt mollit anim id est laborum
+		        </p>
+	    </div>
+		<div class="col-dv-4  col-tv-6 col-mv-12">
+			<h3 id="p2">Beef</h3>
+			<p>
+			  lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+			  commado consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non prodient, sunt in culpa qui officia deserunt mollit anim id est laborum
+		    </p>
+	    </div>
+	    <div class="col-dv-4  col-tv-12 col-mv-12">
+			<h3 id="p3">Sushi</h3>
+			<p>
+			  lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commado consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non prodient, sunt in culpa qui officia deserunt mollit anim id est laborum
+		    </p>
+	    </div>
+
+	</div>
 
 </body>
 </html>
